cvs/ports/x11/kde4/marble/patches/patch-tests_CMakeLists_txt,v
head	1.1;
access;
symbols
	OPENBSD_6_2:1.1.0.12
	OPENBSD_6_2_BASE:1.1
	OPENBSD_6_1:1.1.0.10
	OPENBSD_6_1_BASE:1.1
	OPENBSD_6_0:1.1.0.8
	OPENBSD_6_0_BASE:1.1
	OPENBSD_5_9:1.1.0.4
	OPENBSD_5_9_BASE:1.1
	OPENBSD_5_8:1.1.0.6
	OPENBSD_5_8_BASE:1.1
	OPENBSD_5_7:1.1.0.2
	OPENBSD_5_7_BASE:1.1;
locks; strict;
comment	@# @;


1.1
date	2015.01.05.22.30.54;	author dcoppa;	state Exp;
branches;
next	;
commitid	uCZTgHuOfGU721ws;


desc
@@


1.1
log
@
Fix for the following error:

<command-line>:0:13: warning: missing terminating " character [enabled by default]
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: stray '\' in program
     dataDir = QDir( TESTSRCDIR );
     ^
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: missing terminating " character

...And regen patches while here.
@
text
@$OpenBSD$

Fix for the following error:

<command-line>:0:13: warning: missing terminating " character [enabled by default]
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: stray '\' in program
     dataDir = QDir( TESTSRCDIR );
     ^
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: missing terminating " character


--- tests/CMakeLists.txt.ports.orig	Mon Oct  6 00:35:01 2014
+++ tests/CMakeLists.txt	Mon Jan  5 12:07:23 2015
@@@@ -35,7 +35,7 @@@@ endif ()
 # use this for accessing TESTSRCDIR/data
 #############################################################
 
-add_definitions( -DTESTSRCDIR=\\"${CMAKE_CURRENT_SOURCE_DIR}\\" )
+add_definitions( -DTESTSRCDIR="\\"${CMAKE_CURRENT_SOURCE_DIR}\\"" )
 if (NOT QTONLY)
   add_definitions( -DQT_GUI_LIB )
 endif ()
@
